<resources>
    <string name="app_name">JDRead</string>
    <string name="page_count" translatable="false">%1$d/%2$d</string>
    <string name="book_total" translatable="false">total %s</string>
    <string name="library_name">Library</string>
    <string name="shop_name">Bookstore</string>
    <string name="back_name">Back</string>
    <string name="setting_name">Setting</string>
    <string name="personal_name">Personal</string>
    <string name="wireless_network">wireless network</string>
    <string name="intensity_control">intensity control</string>
    <string name="page_refresh">Page Refresh</string>
    <string name="interest_rates_screen_time">Interest rates screen time</string>
    <string name="help_and_feedback">Help and feedback</string>
    <string name="device_setting_ten_pages">10 pages</string>
    <string name="device_setting_twenty_pages">20 pages</string>
    <string name="device_setting_forty_pages">40 pages</string>
    <string name="device_setting_eighty_pages">80 pages</string>
    <string name="device_setting_never">Never</string>
    <string name="refresh_tips">Refresh the page to ensure that the ink screen is clear, to reduce the page damage, please set it according to your needs.</string>
    <string name="refresh_mode">Speed refresh mode</string>
    <string name="refresh_mode_tips">Greatly improved the page speed, but the shadow was more obvious.</string>
    <string name="view_history_version">View history version</string>
    <string name="update_history_empty">Version update history is empty</string>
    <string name="updatable_version">Updatable version: </string>
    <string name="current_version">Current version: </string>
    <string name="system_update">System update</string>
    <string name="device_config">Device config</string>
    <string name="hour_format">Time format</string>
    <string name="sample_clock">>Opened %d-hour format</string>
    <string name="date_time">Date/time</string>
    <string name="screen_saver">Screen saver</string>
    <string name="password">Password</string>
    <string name="read_tool">Tool in read</string>
    <string name="device_information">Device information</string>
    <string name="update_package_downloaded">The update package has been downloaded</string>
    <string name="consideration">Considerations</string>
    <string name="upgrade_immediately">Upgrade immediately</string>
    <string name="show_back_tab_key">show_back_tab_key</string>
    <string name="select_all">All</string>
    <string name="move_to">Move</string>
    <string name="manage_book">Manage book</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_book_prompt">Whether to delete the selected book from this machine?</string>
    <string name="build_library">build group</string>
    <string name="build_library_hint">Enter up to 20 characters</string>
    <string name="library_move_to_fail">move to fail</string>
    <string name="adding">adding...</string>
    <string name="group_exist">group %s exist</string>
    <string name="please_enter_group_name">please enter group name</string>
    <string name="please_select_book">please select book</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="my_book">My book</string>
    <string name="wifi_pass_book">WIFI pass book</string>
    <string name="book_detail">Book detail</string>
    <string name="rename_library">Rename group</string>
    <string name="delete_library">Delete library</string>
    <string name="delete_library_include_book">Delete library include book</string>
    <string name="the_same_name">Rename can not be the same as the original group name</string>
    <string name="system_update_alert">System update</string>
    <string name="will_execute_update">One update is ready. Will it be executed immediately?</string>
    <string name="later_to_say">Later to say</string>
    <string name="execute_immediately">Executed immediately</string>
    <string name="wifi_no_connected">WiFi not connected</string>
    <string name="new_version_detection">New version detection...</string>
    <string name="already_latest_version">It is the latest version</string>
    <string name="check_update">Check update</string>
    <string name="download_update_package">Download the update package</string>
    <string name="downloading">%d</string>
    <string name="update_application_not_install">Update the application is not installed, please upgrade the latest system</string>
    <string name="wifi_pass_book_prompt_top">Enter the address below in the browser or scan the QR code below：</string>
    <string name="wifi_pass_book_prompt_bottom_1">Mobile upload Android phone only</string>
    <string name="wifi_pass_book_prompt_bottom_2">Do not close this page or lock the screen while uploading</string>
    <string name="pass_succeed">%s pass succeed</string>
    <string name="laboratory">Laboratory</string>
    <string name="quick_back_button">Quick back button</string>
    <string name="quick_back_button_explanation">Put in the middle of the menu below,Easy one-handed operation to quickly return to the previous step,Long press can also be closed</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="file_does_not_exist">File does not exist</string>
    <string name="file_format_error">Book format error</string>
    <string name="document_path_error">Book path error</string>
    <string name="open_book_parameter_error">There is no book path in opening book information</string>
    <string name="open_book_fail">Open book fail</string>
    <string name="product_introduce">The product FAQ, please scan the code</string>
    <string name="common_problem">Common problem</string>
    <string name="commit">commit</string>
    <string name="feedback_content_hint">Please enter 5-200 word feedback content</string>
    <string name="feedback_format_error">Feedback content format is wrong</string>
    <string name="personal_task">Personal task</string>
    <string name="personal_account">Personal account</string>
    <string name="personal_notes">Personal notes</string>
    <string name="personal_books">Personal books</string>
    <string name="read_preference">Reading preference</string>
    <string name="my_read_preference">Personal Reading preference</string>
    <string name="gift_center">Gift center</string>
    <string name="gift_no_package">No gift package</string>
    <string name="log_out">Log out</string>
    <string name="login_immediately">Login immediately</string>
    <string name="unsigned_in">Unsigned</string>
    <string name="signed_in">Signed</string>
    <string name="phone_number_format_error">Phone number format is wrong</string>
    <string name="consumer_hotline">Phone: 400-XXX-XXXX</string>
    <string name="official_qq_group">Official QQ: XXXXXXXXX XXXXXXXXX</string>
    <string name="consumer_hotline_comments">8:00-20:00</string>
    <string name="official_email">Email: XXXXXXXX@jd.com</string>
    <string name="device_setting_version_number">Version: %s</string>
    <string name="device_setting_serial_number">Serial: %s</string>
    <string name="manual">Common problem</string>
    <string name="feedback">The problem of feedback</string>
    <string name="contact_us">Contact us</string>
    <string name="view_all">View All</string>
    <string name="ranking">Ranking</string>
    <string name="fluent_read">Fluent Read</string>
    <string name="sale">Sale</string>
    <string name="new_book">New Book</string>
    <string name="category">Category</string>
    <string name="back_to_top">Back to top</string>
    <string name="view_all_books">View All Books</string>
    <string name="search_view_hint">Please input what you want to search</string>
    <string name="book_detail_yuedou_price">%1$s Read Bean</string>
    <string name="book_detail_button_now_read">Now Read</string>
    <string name="book_detail_button_buy_whole_book">download the whole book</string>
    <string name="cart">Cart</string>
    <string name="book_detail_text_view_content_introduce">Introduce</string>
    <string name="book_comment_detail">Comment Detail</string>
    <string name="book_detail_view_catalog">Catalog</string>
    <string name="book_detail_view_comments">Comments</string>
    <string name="book_detail_view_copyright">CopyRight</string>
    <string name="book_detail_text_view_recommend_title">Book Recommend</string>
    <string name="book_detail_yuedou_discount">%.1f Discount</string>
    <string name="book_detail_star">%.1f</string>
    <string name="title_bar_title_book_detail">Book Detail</string>
    <string name="title_bar_title_book_comment">Comments</string>
    <string name="title_bar_title_book_write_comment">Write Comments</string>
    <string name="book_comment_indicator_value">%1$s/%2$s</string>
    <string name="copyright_book_format">Format：</string>
    <string name="copyright_book_word_count">Word count：</string>
    <string name="copyright_book_author">Author：</string>
    <string name="copyright_book_publish">Publisher：</string>
    <string name="copyright_book_publish_time">Publication date：</string>
    <string name="copyright_book_isbn">ISBN：</string>
    <string name="copyright_book_edition">Edition：</string>
    <string name="copyright_book_size">Book size：</string>
    <string name="copyright_book_size_value">%.2fMB</string>
    <string name="word_count_million_words">million words</string>
    <string name="word_count_words">words</string>
    <string name="empty_url">Useless address</string>
    <string name="download_link_invalid">Download Link Invalid</string>
    <string name="file_path_invalid">File path invalid</string>
    <string name="download_fail">Download fail</string>
    <string name="book_detail_download_go_on">Continue to download</string>
    <string name="book_detail_downloading">Downloading</string>
    <string name="book_detail_try_read">Try read the book</string>
    <string name="book_detail_download_add_shelf">Trying to read file has started to download and add a bookcase</string>
    <string name="book_detail_cannot_fluent">Cannot smooth read</string>
    <string name="book_detail_no_card">No effective smooth card in your account, so we can not get through the book</string>
    <string name="reader_typeface">Typeface</string>
    <string name="reader_boldface">Boldface</string>
    <string name="reader_arial">Arial</string>
    <string name="reader_italics">Italics</string>
    <string name="reader_round_body">Round body</string>
    <string name="reader_traditional">Traditional</string>
    <string name="reader_font_size">Font size</string>
    <string name="reader_font_size_one">1</string>
    <string name="reader_font_size_two">2</string>
    <string name="reader_font_size_three">3</string>
    <string name="reader_font_size_four">4</string>
    <string name="reader_font_size_five">5</string>
    <string name="reader_font_size_six">6</string>
    <string name="reader_format">Format</string>
    <string name="reader_adaptive">Adaptive</string>
    <string name="reader_customize">Customize</string>
    <string name="reader_comic_mode">Comic</string>
    <string name="reader_default_mode">Default</string>
    <string name="reader_with_black">With black</string>
    <string name="reader_trimming">Trimming</string>
    <string name="reader_rearrange">Rearrange</string>
    <string name="reader_reset">Reset</string>
    <string name="reader_reset_pdf">Reset PDF</string>
    <string name="translation">Translation</string>
    <string name="reader_book_info_note">Note</string>
    <string name="lineation">Lineation</string>
    <string name="copy">Copy</string>
    <string name="baidupedia">Baidupedia</string>
    <string name="power_off_prompt">Power off?</string>
    <string name="reboot">Reboot</string>
    <string name="shutdown">Shutdown</string>
</resources>