<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_text_content_height"
            android:gravity="center"
            android:text="@string/power_off_prompt"
            android:textColor="@android:color/black"
            android:textSize="@dimen/level_one_heading_font" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_button_height"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_power_off"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@android:color/black"
                android:textSize="@dimen/level_two_heading_font" />

            <TextView
                android:id="@+id/reboot_device"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/reboot"
                android:textColor="@android:color/black"
                android:textSize="@dimen/level_two_heading_font" />

            <TextView
                android:id="@+id/confirm_power_off"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/shutdown"
                android:textColor="@android:color/black"
                android:textSize="@dimen/level_two_heading_font" />
        </LinearLayout>
    </LinearLayout>
</layout>