<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="SystemUpdateAlertBinding">

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dialog_update_alert_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/system_update_alert"
            android:textColor="@android:color/black"
            android:textSize="@dimen/level_two_heading_font" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dialog_update_alert_margin_top"
            android:text="@string/will_execute_update"
            android:textColor="@android:color/black"
            android:textSize="@dimen/level_two_heading_font" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_update_alert_margin_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/update_alert_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/later_to_say"
                android:textColor="@android:color/black"
                android:textSize="@dimen/level_two_heading_font" />

            <TextView
                android:id="@+id/update_alert_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/execute_immediately"
                android:textColor="@android:color/black"
                android:textSize="@dimen/level_two_heading_font" />
        </LinearLayout>
    </LinearLayout>
</layout>
